# backend/src/main/java/com/kotonekanno/job_hunt_workspace/dtos/auth/LoginResponse.java
@@ -1,0 +1,6 @@
+package com.kotonekanno.job_hunt_workspace.dtos.auth;
+
+public record LoginResponse(
+    String accessToken,
+    String refreshToken
+) {}
